# privacy-engineering-sandbox

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  settings.ini
explore/: fgscore_sandbox.ipynb
grail/: _modidx.py
grail/fairness/data/: metrics.py  utils.py
nbs/: 01_fairness_data_utils.ipynb  02_fairness_data_metrics.ipynb  03_fairness_model_metrics.ipynb  index.ipynb  nbdev.yml
